<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/favorites_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.FavoritesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorites_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/main_list_item"/>
</FrameLayout>