<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/menu_home_title_text"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_round_star_24"
        android:title="@string/menu_favorites_title_text"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_round_settings_24"
        android:title="@string/menu_settings_title_text"
        app:showAsAction="withText"/>
</menu>