<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.DetailsFragment">

    <com.devsoldatenkov.cryptoapp.view.customViews.ChartView
        android:id="@+id/chart_view"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:gravity="center"
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorites"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_round_star_24"
        app:layout_constraintTop_toBottomOf="@id/chart_view"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>